tests/error/empty_func_name.clac
// TEST: expect_compile_error
: ;
1 print quit
